tests/expectations/compiler/const_generics/unresolved_mismatch_fail.out
Error [ECMP0376012]: Unable to resolve composite expression `Foo`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:12:22
     |
  12 |         return Foo::[2 * N * x] { x: 0 };
     |                      ^^^^^^^^^
